# ros_ai_report

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  package.xml  setup.py  task.launch
doc/: report.tex
doc/appendix/: appendixA.tex
doc/preamble/: abstract.tex  definitions.tex
doc/references/: report_bibliography.bib
doc/text/: conception.tex  conclusion.tex  evaluation.tex  fundamentals.tex  implementation.tex  introduction.tex
msg/: AggregatedData.msg
scripts/: ai.py  microphone.py  processor.py
src/ros_ai_report/: background.py  dataset.py  model.py  training.py  utils.py
srv/: CommandPrediction.srv
